# aether

./: .gitignore  Dockerfile
.aether-server-state/: ssh_monitor_ed25519
.github/workflows/: deploy-client.yml
architectures/centralized/client/src/: main.rs
architectures/centralized/server/: Cargo.toml
architectures/centralized/server/src/: app.rs  lib.rs  main.rs  ssh_monitor.rs  web.rs
architectures/centralized/testing/tests/: integration_tests.rs
architectures/centralized/volunteer/: Cargo.toml
architectures/centralized/volunteer/src/: app.rs  brand.rs  config.rs  detect.rs  logo.rs  logo.txt  main.rs  prepare.rs  requirements.rs  terminal.rs
config/: training-run.toml
config/deepseek-v3-dense-160m-ultra-fineweb/: state.toml
config/deepseek-v3-dense-250m-ufw/: data.toml  state.toml
scripts/: aethercompute-client.sh  aethercompute-seed.sh  push-new-model-hf.py  training-control-dashboard.py
shared/client/: Cargo.toml
shared/client/src/: cli.rs
shared/client/src/state/: cooldown.rs  init.rs  stats.rs  steps.rs  train.rs  types.rs
shared/coordinator/src/: coordinator.rs  data_selection.rs
shared/core/src/: lib.rs
shared/data-provider/: Cargo.toml
shared/data-provider/src/: data_provider.rs  dummy.rs  http.rs  lib.rs  local.rs  traits.rs
shared/eval/src/tasks/: arc.rs
shared/event-sourcing/src/: projection.rs
shared/metrics/src/: lib.rs
shared/modeling/src/: python_distributed_trainer.rs  trainer.rs
shared/tui/src/: app.rs  lib.rs  logging.rs  tabbed.rs  terminal.rs
