[package]
name = "psyche-data-provider"
version.workspace = true
edition = "2021"

[dependencies]
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-watcher = { workspace = true, optional = true }
psyche-tui = { workspace = true, optional = true }
psyche-network = { workspace = true, optional = true }
hf-hub.workspace = true
parquet = "51.0.0"
tokio.workspace = true
anchor-lang.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
memmap2.workspace = true
rand_chacha.workspace = true
rand.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
postcard.workspace = true
bytemuck.workspace = true
reqwest = "0.12.12"
google-cloud-storage = "0.24.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json.workspace = true
ts-rs.workspace = true
rayon.workspace = true

[features]
remote = ["psyche-network", "psyche-tui", "psyche-watcher"]

[dev-dependencies]
psyche-tui.workspace = true
tokenizers.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
clap.workspace = true
tempfile = "3.15.0"
static-web-server = { git = "https://github.com/arilotter/static-web-server", rev = "c91445427b56c5ddff0365d8ec116e3b567377ac" } # forked to add a channel for getting the port

[[example]]
name = "tcp"
required-features = ["remote"]
