[package]
name = "psyche-centralized-server"
version.workspace = true
edition = "2021"

[dependencies]
psyche-centralized-shared = { path = "../shared" }
psyche-client.workspace = true
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-data-provider.workspace = true
psyche-network.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower-http.workspace = true
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
bytes.workspace = true
rand.workspace = true
sha2.workspace = true
futures-util.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
bytemuck.workspace = true
toml.workspace = true
clap-markdown.workspace = true
psyche-python-extension-impl = { workspace = true, optional = true }
tikv-jemallocator.workspace = true

[features]
python = ["psyche-python-extension-impl"]
