[package]
name = "psyche-centralized-server"
version.workspace = true
edition = "2021"

[dependencies]
psyche-centralized-shared = { path = "../shared" }
psyche-client.workspace = true
psyche-coordinator.workspace = true
psyche-core.workspace = true
psyche-data-provider = { workspace = true, features = ["remote"] }
psyche-network.workspace = true
psyche-tui.workspace = true
psyche-watcher.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower-http.workspace = true
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
bytes.workspace = true
rand.workspace = true
rand08 = { package = "rand", version = "0.8.5" }
sha2.workspace = true
futures-util.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
bytemuck.workspace = true
toml.workspace = true
clap-markdown.workspace = true
psyche-python-extension-impl = { workspace = true, optional = true }
tikv-jemallocator.workspace = true
wandb = { git = "https://github.com/NousResearch/wandb-rs.git", rev = "db6118e3bf3526718c1097baecf36f564233a735" }

[features]
python = ["psyche-python-extension-impl"]
